Fix Button overflow issue

--- a/src/components/atoms/Button/Button.module.css
+++ b/src/components/atoms/Button/Button.module.css
@@ -9,13 +9,13 @@
 }
 
 .button {
-  @apply block relative bg-primary-purple1 rounded-none text-secondary-pink overflow-hidden p-2 text-center uppercase z-1;
+  @apply inline-block relative bg-primary-purple1 rounded-none text-secondary-pink overflow-hidden p-2 text-center uppercase z-1;
 
   border: 2px solid #170387;
   min-width: 150px;
-  max-width: 150px;
   text-decoration: none;
   transition: all 0.7s;
+  width: auto;
 
   &::before {
     @apply block absolute bg-secondary-pink bottom-0 z-behind m-0 mx-auto opacity-0;
